--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div>{{'user.information.individual' | translate}}</div>
+      <div>{{'user.birthday' | translate}}</div>
       <div>
         <input type="text" [(ngModel)]="birthday"/>
       </div>
