--- a/src/app/main/contract-template/contract-template.component.scss
+++ b/src/app/main/contract-template/contract-template.component.scss
@@ -202,6 +202,8 @@
 ::ng-deep .multiselect-dropdown {
   .selected-item {
     max-width: 95% !important;
+    min-height: 38px;
+    height: auto;
   }
 }
 .div_icon{
