--- a/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
+++ b/src/app/main/contract/shared/model/infor-contract/infor-contract.component.html
@@ -17,7 +17,7 @@
       <div class="form-group">
         <div class="label_item">{{'contract.name' | translate}} <span class="require_star">*</span></div>
         <div class="input-group">
-          <input type="text" [(ngModel)]="name" class="form-control"/>
+          <input type="text" [(ngModel)]="name" class="input_text"/>
         </div>
       </div>
       <div class="form-group">
@@ -52,7 +52,7 @@
       <div class="form-group">
         <div class="label_item">{{'contract.number' | translate}}</div>
         <div class="input-group">
-          <input type="text" [(ngModel)]="code" class="form-control"/>
+          <input type="text" [(ngModel)]="code" class="input_text"/>
         </div>
       </div>
     </div>
@@ -119,7 +119,7 @@
       <div class="form-group">
         <div class="label_item">{{'note' | translate}}</div>
         <div class="input-group">
-          <input type="text" [(ngModel)]="notes" class="form-control"/>
+          <input type="text" [(ngModel)]="notes" class="input_text"/>
         </div>
       </div>
     </div>
