--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.scss
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.scss
@@ -373,6 +373,8 @@ input[type=number] {
 
     ::ng-deep .multiselect-dropdown .dropdown-btn {
       border: 1px solid #106DB6 !important;
+      min-height: 38px;
+      height: auto;
     }
 
   }
