--- a/src/app/main/contract-template/shared/model/infor-contract-template/infor-contract-template.component.scss
+++ b/src/app/main/contract-template/shared/model/infor-contract-template/infor-contract-template.component.scss
@@ -1,7 +1,8 @@
 ::ng-deep .multiselect-dropdown {
   .dropdown-btn {
     border: 1px solid #87CAFF !important;
-    height: 38px;
+    min-height: 38px;
+    height: auto;
   }
 }
 
