--- a/src/app/main/user/user.component.scss
+++ b/src/app/main/user/user.component.scss
@@ -17,7 +17,7 @@ hr{
   margin-top: 2px;
   border: 1px solid #87CAFF;
 }
-input {
+input, .input_text {
   border: 0;
   background: #EFF2F5;
   padding: 7px;
